Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimCurve_*          XbimCurveHandle;
typedef struct XbimCurve2d_*        XbimCurve2dHandle;
typedef int XbimResult;
typedef enum XbimSurfaceType
{
    XBIM_SURFACE_PLANE       = 0,
    XBIM_SURFACE_CYLINDRICAL = 1,
    XBIM_SURFACE_SPHERICAL   = 2
} XbimSurfaceType;
XBIM_EXPORT XbimResult XBIM_CALL xbim_halfspace_build(
    XbimContextHandle ctx,
    XbimSurfaceType   surfaceType,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    int    agreementFlag,
    double oneMeter,
    double precision,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_halfspace_build_polygonal_bounded(
    XbimContextHandle ctx,
    double surfaceOriginX, double surfaceOriginY, double surfaceOriginZ,
    double surfaceZDirX,   double surfaceZDirY,   double surfaceZDirZ,
    double surfaceXDirX,   double surfaceXDirY,   double surfaceXDirZ,
    int    agreementFlag,
    const double* boundaryPointsX,
    const double* boundaryPointsY,
    int    boundaryPointCount,
    double boundaryOriginX, double boundaryOriginY, double boundaryOriginZ,
    double boundaryZDirX,   double boundaryZDirY,   double boundaryZDirZ,
    double boundaryXDirX,   double boundaryXDirY,   double boundaryXDirZ,
    double oneMeter,
    double precision,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_make(
    XbimContextHandle         ctx,
    const XbimShapeHandle*    shapeHandles,
    int                       numShapes,
    XbimShapeHandle*          outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_sew(
    XbimContextHandle         ctx,
    const XbimShapeHandle*    shapeHandles,
    int                       numShapes,
    double                    tolerance,
    XbimShapeHandle*          outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_cut(
    XbimContextHandle   ctx,
    XbimShapeHandle     compoundHandle,
    XbimShapeHandle     toolHandle,
    double              fuzzyTolerance,
    int*                outHasWarnings,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_add(
    XbimShapeHandle compoundHandle,
    XbimShapeHandle childHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_child_count(
    XbimShapeHandle handle,
    int*            outCount);
XBIM_EXPORT XbimResult XBIM_CALL xbim_compound_get_children(
    XbimShapeHandle     handle,
    XbimShapeHandle*    outHandles,
    int*                count);
XBIM_EXPORT XbimResult XBIM_CALL xbim_vertex_build(
    XbimContextHandle ctx,
    double x, double y, double z,
    double tolerance,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_vertex_point(
    XbimShapeHandle vertexHandle,
    double* outX, double* outY, double* outZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_vertex_tolerance(
    XbimShapeHandle vertexHandle,
    double*         outTolerance);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_length(
    XbimShapeHandle wireHandle,
    double*         outLength);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_contour_area(
    XbimShapeHandle wireHandle,
    double*         outArea);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_build_from_surface(
    XbimContextHandle ctx,
    int               surfaceType,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    double tolerance,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_build_from_wire(
    XbimContextHandle ctx,
    XbimShapeHandle   wireHandle,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_from_edges(
    XbimContextHandle        ctx,
    const XbimShapeHandle*   edgeHandles,
    int                      numEdges,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_from_curves(
    XbimContextHandle         ctx,
    const XbimCurveHandle*    curveHandles,
    int                       numCurves,
    double                    tolerance,
    double                    gapSize,
    XbimShapeHandle*          outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_polyline(
    XbimContextHandle ctx,
    const double*     pointsXYZ,
    int               numPoints,
    double            tolerance,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_polygon(
    XbimContextHandle ctx,
    const double*     pointsXYZ,
    int               numPoints,
    int               closed,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_is_closed(
    XbimShapeHandle wireHandle,
    double          tolerance,
    int*            outClosed);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_get_parameter(
    XbimShapeHandle wireHandle,
    double          pointX,
    double          pointY,
    double          pointZ,
    double          tolerance,
    double*         outParam);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_trimmed(
    XbimContextHandle ctx,
    XbimShapeHandle   wireHandle,
    double            u1,
    double            u2,
    int               sameSense,
    double            tolerance,
    double            radianFactor,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_trimmed_by_length(
    XbimContextHandle ctx,
    XbimShapeHandle   wireHandle,
    double            arcStart,
    double            arcEnd,
    double            tolerance,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_trimmed_by_points(
    XbimContextHandle ctx,
    XbimShapeHandle   wireHandle,
    double            p1X,
    double            p1Y,
    double            p1Z,
    double            p2X,
    double            p2Y,
    double            p2Z,
    double            u1,
    double            u2,
    int               preferCartesian,
    int               sameSense,
    double            tolerance,
    double            radianFactor,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_fillet(
    XbimContextHandle ctx,
    XbimShapeHandle   wireHandle,
    double            filletRadius,
    double            tolerance,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_line(
    XbimContextHandle ctx,
    double startX, double startY, double startZ,
    double endX,   double endY,   double endZ,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_from_curve(
    XbimContextHandle ctx,
    XbimShapeHandle   curveEdgeHandle,
    double            param1,
    double            param2,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_circle_arc(
    XbimContextHandle ctx,
    double centerX, double centerY, double centerZ,
    double normalX, double normalY, double normalZ,
    double radius,
    double startAngle,
    double endAngle,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_circle_arc_3pt(
    XbimContextHandle ctx,
    double p1X, double p1Y, double p1Z,
    double p2X, double p2Y, double p2Z,
    double p3X, double p3Y, double p3Z,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_from_curve_handle(
    XbimContextHandle ctx,
    XbimCurveHandle   curveHandle,
    double startX, double startY, double startZ,
    double endX,   double endY,   double endZ,
    int              sameSense,
    double           tolerance,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_build_from_curve2d_handle(
    XbimContextHandle  ctx,
    XbimCurve2dHandle  curve2dHandle,
    double startX, double startY,
    double endX,   double endY,
    int                sameSense,
    double             tolerance,
    XbimShapeHandle*   outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_from_curve_handle(
    XbimContextHandle ctx,
    XbimCurveHandle   curveHandle,
    XbimShapeHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_from_curve2d_handle(
    XbimContextHandle  ctx,
    XbimCurve2dHandle  curve2dHandle,
    XbimShapeHandle*   outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_length(
    XbimShapeHandle edgeHandle,
    double*         outLength);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_tolerance(
    XbimShapeHandle edgeHandle,
    double*         outTolerance);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_vertices(
    XbimShapeHandle  edgeHandle,
    XbimShapeHandle* outStart,
    XbimShapeHandle* outEnd);
XBIM_EXPORT XbimResult XBIM_CALL xbim_edge_get_curve(
    XbimShapeHandle  edgeHandle,
    XbimCurveHandle* outCurve,
    double*          outParam1,
    double*          outParam2);