Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs


        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_halfspace_build(
            NativeContextHandle ctx,
            int surfaceType,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            int agreementFlag,
            double oneMeter,
            double precision,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_halfspace_build_polygonal_bounded(
            NativeContextHandle ctx,
            double surfaceOriginX, double surfaceOriginY, double surfaceOriginZ,
            double surfaceZDirX, double surfaceZDirY, double surfaceZDirZ,
            double surfaceXDirX, double surfaceXDirY, double surfaceXDirZ,
            int agreementFlag,
            [MarshalAs(UnmanagedType.LPArray)] double[] boundaryPointsX,
            [MarshalAs(UnmanagedType.LPArray)] double[] boundaryPointsY,
            int boundaryPointCount,
            double boundaryOriginX, double boundaryOriginY, double boundaryOriginZ,
            double boundaryZDirX, double boundaryZDirY, double boundaryZDirZ,
            double boundaryXDirX, double boundaryXDirY, double boundaryXDirZ,
            double oneMeter,
            double precision,
            out NativeShapeHandle outHandle);

        #endregion

        #region Compound Operations

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_make(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] shapeHandles,
            int numShapes,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_sew(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] shapeHandles,
            int numShapes,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_cut(
            NativeContextHandle ctx,
            NativeShapeHandle compoundHandle,
            NativeShapeHandle toolHandle,
            double fuzzyTolerance,
            out int outHasWarnings,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_add(
            NativeShapeHandle compoundHandle,
            NativeShapeHandle childHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_child_count(
            NativeShapeHandle handle,
            out int outCount);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_compound_get_children(
            NativeShapeHandle handle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] outHandles,
            ref int count);

        #endregion

        #region Vertex

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_vertex_build(
            NativeContextHandle ctx,
            double x, double y, double z,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_vertex_point(
            NativeShapeHandle vertexHandle,
            out double outX, out double outY, out double outZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_vertex_tolerance(
            NativeShapeHandle vertexHandle,
            out double outTolerance);

        #endregion

        #region Edge

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_line(
            NativeContextHandle ctx,
            double startX, double startY, double startZ,
            double endX, double endY, double endZ,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_from_curve(
            NativeContextHandle ctx,
            NativeShapeHandle curveEdgeHandle,
            double param1,
            double param2,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_circle_arc(
            NativeContextHandle ctx,
            double centerX, double centerY, double centerZ,
            double normalX, double normalY, double normalZ,
            double radius,
            double startAngle,
            double endAngle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_circle_arc_3pt(
            NativeContextHandle ctx,
            double p1X, double p1Y, double p1Z,
            double p2X, double p2Y, double p2Z,
            double p3X, double p3Y, double p3Z,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_from_curve_handle(
            NativeContextHandle ctx,
            NativeCurveHandle curveHandle,
            double startX, double startY, double startZ,
            double endX, double endY, double endZ,
            int sameSense,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_build_from_curve2d_handle(
            NativeContextHandle ctx,
            NativeCurve2dHandle curve2dHandle,
            double startX, double startY,
            double endX, double endY,
            int sameSense,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_from_curve_handle(
            NativeContextHandle ctx,
            NativeCurveHandle curveHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_from_curve2d_handle(
            NativeContextHandle ctx,
            NativeCurve2dHandle curve2dHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_length(
            NativeShapeHandle edgeHandle,
            out double outLength);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_tolerance(
            NativeShapeHandle edgeHandle,
            out double outTolerance);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_vertices(
            NativeShapeHandle edgeHandle,
            out NativeShapeHandle outStart,
            out NativeShapeHandle outEnd);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_edge_get_curve(
            NativeShapeHandle edgeHandle,
            out NativeCurveHandle outCurve,
            out double outParam1,
            out double outParam2);

        #endregion

        #region Wire

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_from_edges(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] edgeHandles,
            int numEdges,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_from_curves(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] curveHandles,
            int numCurves,
            double tolerance,
            double gapSize,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_polyline(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsXYZ,
            int numPoints,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_polygon(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsXYZ,
            int numPoints,
            int closed,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_is_closed(
            NativeShapeHandle wireHandle,
            double tolerance,
            out int outClosed);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_length(
            NativeShapeHandle wireHandle,
            out double outLength);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_contour_area(
            NativeShapeHandle wireHandle,
            out double outArea);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_get_parameter(
            NativeShapeHandle wireHandle,
            double pointX,
            double pointY,
            double pointZ,
            double tolerance,
            out double outParam);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_trimmed(
            NativeContextHandle ctx,
            NativeShapeHandle wireHandle,
            double u1,
            double u2,
            int sameSense,
            double tolerance,
            double radianFactor,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_trimmed_by_length(
            NativeContextHandle ctx,
            NativeShapeHandle wireHandle,
            double arcStart,
            double arcEnd,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_trimmed_by_points(
            NativeContextHandle ctx,
            NativeShapeHandle wireHandle,
            double p1X, double p1Y, double p1Z,
            double p2X, double p2Y, double p2Z,
            double u1,
            double u2,
            int preferCartesian,
            int sameSense,
            double tolerance,
            double radianFactor,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_fillet(
            NativeContextHandle ctx,
            NativeShapeHandle wireHandle,
            double filletRadius,
            double tolerance,
            out NativeShapeHandle outHandle);

        #endregion

        #region Face

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_build_from_surface(
            NativeContextHandle ctx,
            int surfaceType,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_build_from_wire(
            NativeContextHandle ctx,
            NativeShapeHandle wireHandle,
            out NativeShapeHandle outHandle);
